--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+version 0.3
+	This version is able to parse dumpstate file passed via the command line.	
+
 version 0.2
 	This version introduces filtering.
 
