--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+version 0.4
+	This version introduces hiding filter to remove unnecessary distracting lines information from the log.
+
 version 0.3
 	This version is able to parse dumpstate file passed via the command line.	
 
