--- a/README
+++ b/README
@@ -16,8 +16,8 @@ The tool can parse adb output or a dumpstate file specified in the command line.
 
 Full-text search
 	1. press '/' to show search field
-	2. press Enter to start search
-	3. press F3 to search next occurence
+	2. press Enter to start searching
+	3. press F3 to search for the next occurence
 Searching is performed in tags and messages starting from the first selected row. 
 
 Keys:
