--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 TODO:
+ - Toggle filter (temporary disable)
  - Filtering results to index window (like pinned records)
  - Different colors for different filters
  - Implement filter based on log type (main, radio, etc)
- - Toggle filter (temporary disable)
  - Highlight under selected lines
  - ddmlib integration 
  - Parse adb brief output in dumpstate
+ - Copy from records' table
