--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+version 0.11
+	[+] Parse simple log files in threadtime and brief formats
+	[*] Show message if text not found
+
 version 0.10
     [+] Filtering by log type
     [+] New adb interaction library
