--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,6 @@
+version 0.12	
+	[+]  Case-insensitive search
+
 version 0.11
 	[+] Parse simple log files in threadtime and brief formats
 	[*] Show message if text not found
