--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+version 0.17.2
+    [*] Ordering of the lines was reworked to be as natural as possible
+    [*] Logs are now saved in native adb format
+    [*] Fixed crash when opening ill-formated logfile
+    
 version 0.17.1
     [*] Scrolling if there are many filters
     [*] Dialogs are shown over the main window after alt-tab
