--- a/README
+++ b/README
@@ -4,42 +4,42 @@ Android log viewer is the tool to simplify analysis of the Android logs.
 
 FEATURES
 
-	- Display logs from a device or an emulator 
-	- Display saved logs and dumpstate files 
-	- Search in the logs using regex if needed 
-	- Bookmarks 
-	- Filter log lines by tag, PID, log priority, message content 
-	- Filtered lines can be hidden, highlighted or shown in a separate window 
-	- Display any avaliable buffers: main, system, events, radio 
-	- Save filtered lines 
-	- Display process list
+    - Display logs from a device or an emulator 
+    - Display saved logs and dumpstate files 
+    - Search in the logs using regex if needed 
+    - Bookmarks 
+    - Filter log lines by tag, PID, log priority, message content 
+    - Filtered lines can be hidden, highlighted or shown in a separate window 
+    - Display any avaliable buffers: main, system, events, radio 
+    - Save filtered lines 
+    - Display process list
 
 INSTALLATION
 
 Requirements:
-	- JRE 6 
-	- Android SDK (to work with a device or an emulator) 
+    - JRE 6 
+    - Android SDK (to work with a device or an emulator) 
 
 Unpack a zip archive to any folder. 
 
 Use the OS-specific script to launch the logviewer:
-	- logview.bat (Windows) 
-	- logview (Linux) 
+    - logview.bat (Windows) 
+    - logview (Linux) 
 Both scripts expect the javaw/java to be on your PATH. 
 
 OVERVIEW: FILTERS
 
 The following filtering criteria are supported:
-	- Tag(s) 
-	- Message text 
-	- PID(s) 
-	- Log priority 
+    - Tag(s) 
+    - Message text 
+    - PID(s) 
+    - Log priority 
 
 Filtered lines can be:
-	- Showed (all other lines will be hidden) 
-	- Hidden 
-	- Highlighted 
-	- Showed in a separate window
+    - Showed (all other lines will be hidden) 
+    - Hidden 
+    - Highlighted 
+    - Showed in a separate window
 
 You may enter several tags or PIDs separated with commas, any of them will be filtered.
 Message filter supports regular expressions.
@@ -47,21 +47,21 @@ If several criteria are specified, only records that match all of them will be f
 
 OVERVIEW: SEARCHING
 
-	1. Ctrl+F - show search field
-	2. Enter the pattern, then press Enter to start searching
-	3. F3 - find next, Shift+F3 - find previous
-	4. Esc - clear search results
+    1. Ctrl+F - show search field
+    2. Enter the pattern, then press Enter to start searching
+    3. F3 - find next, Shift+F3 - find previous
+    4. Esc - clear search results
 You should wrap your pattern into "/.../" - slashes - to search using regular expressions, 
-ex. “/^[Aa].*$/” - all lines that start with lower or upper 'a'. Regex-based searching is 
+ex. "/^[Aa].*$/" - all lines that start with lower or upper 'a'. Regex-based searching is 
 case-sensitive in opposite to a simple searching. Standard Java regular expression 
 syntax is used.
 
 OVERVIEW: OTHER
 
-	- The bookmarks windows can be used for quick jumping between marked lines. Use context 
-	  menu to add a line to bookmarks.
-	- You can copy log lines to the clipboard using Ctrl+C, Ctrl+Ins or the context menu
-	- Double-click on tag, message or pid cell opens edit mode where you can select and copy 
-	  a substring of the cell’s content
+    - The bookmarks windows can be used for quick jumping between marked lines. Use context 
+      menu to add a line to bookmarks.
+    - You can copy log lines to the clipboard using Ctrl+C, Ctrl+Ins or the context menu
+    - Double-click on tag, message or pid cell opens edit mode where you can select and copy 
+      a substring of the cell's content
 
 See the complete manual at https://bitbucket.org/mlopatkin/android-log-viewer/wiki
